--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,14 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #F2F2F2;
 }
 
 .form-container {
     display: block;
-    max-width: 24rem;
+    max-width: 20rem;
     margin: auto;
+    margin-top: 2rem;
     background: #eceff1;
     padding: 48px;
     border-radius: 16px;
@@ -44,4 +46,42 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.pointer {
+    cursor: pointer !important;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+#style-3::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+}
+
+#style-3::-webkit-scrollbar:hover {
+    width: 6px;
+}
+
+#style-3:hover::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
+}
+
+#style-3::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
+}
+
+#style-3::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
 }
